--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -372,7 +372,7 @@
                 Є питання?</h2>
             <div class="question-form">
                 <p>Залишіть заявку і ми з Вами зв'яжемося</p>
-                <form action="">
+                <form>
                     <input type="text" id="fname" name="fname" value="" placeholder="Ваше имя"><br>
                     <input type="text" id="lname" name="lname" value="" placeholder="Ваш телефон"><br><br>
                     <button class="btn" type="submit">Відправити</button>
@@ -423,7 +423,7 @@
                     </div>
                     <div class="footer-detail">
                         <p>Телефон:</p>
-                        <a href="tel:+(380) 565 78 86">+(380) 565 78 86</a>
+                        <a href="tel:+3805657886">+(380) 565 78 86</a>
                     </div>
                 </div>
             </div>
