feat: product cards

--- a/index.html
+++ b/index.html
@@ -40,12 +40,8 @@
                             <img src="./img/tg.svg" alt="">
                         </a>
                     </div>
-                    <div class="badge-icon">
-                        <a href="#">
-                            <img src="./img/love.svg" alt="">
-                        </a>
-                    </div>
-                    <div class="badge-icon">
+            
+                    <div class="badge-icon badge-icon-product">
                         <a href="#">
                             <img src="./img/icon.svg" alt="">
                         </a>
@@ -207,106 +203,130 @@
                     </div>
                 </div>
                 <div class="filter-cards">
-                    <div class="cards-item">
+                    <div class="cards-item" data-id ="01">
                         <div class="cards-header">
-                            <span>5000</span>
+                            <span class="cards-title">ELF BAR1</span>
                             <img src="./img/love.svg" alt="like">
                         </div>
                         <div class="cards-banner">
-                            <img src="./img/card1.png" alt="card">
+                            <img class="product-img" src="./img/card1.png" alt="card">
                         </div>
                         <div class="cards-price">
-                            <span>ELF BAR </span>
-                            <span>250 грн</span>
+                            <div class="counter-inner">
+                                <div class="counter-control" data-action="minus">-</div>
+                                <div class="counter-control" data-counter>1</div>
+                                <div class="counter-control" data-action="plus">+</div>
+                            </div>
+                            <span class="price-currency">250 грн</span>
                         </div>
                         <div class="cards-btn">
                             <button class="option-btn">Детальніше</button>
-                            <button class="btn shop-btn">До кошику</button>
+                            <button class="btn shop-btn" type="button" data-card>До кошику</button>
                         </div>
                     </div>
-                    <div class="cards-item">
+                    <div class="cards-item" data-id ="02">
                         <div class="cards-header">
-                            <span>5000</span>
+                            <span class="cards-title">ELF BAR2</span>
                             <img src="./img/love.svg" alt="like">
                         </div>
                         <div class="cards-banner">
-                            <img src="./img/card1.png" alt="card">
+                            <img class="product-img" src="./img/card1.png" alt="card">
                         </div>
                         <div class="cards-price">
-                            <span>ELF BAR </span>
-                            <span>250 грн</span>
+                            <div class="counter-inner">
+                                <div class="counter-control" data-action="minus">-</div>
+                                <div class="counter-control" data-counter>1</div>
+                                <div class="counter-control" data-action="plus">+</div>
+                            </div>
+                            <span class="price-currency">270 грн</span>
                         </div>
                         <div class="cards-btn">
                             <button class="option-btn">Детальніше</button>
-                            <button class="btn shop-btn">До кошику</button>
+                            <button class="btn shop-btn" type="button" data-card>До кошику</button>
                         </div>
                     </div>
-                    <div class="cards-item">
+                    <div class="cards-item" data-id ="03">
                         <div class="cards-header">
-                            <span>5000</span>
+                            <span class="cards-title">ELF BAR3</span>
                             <img src="./img/love.svg" alt="like">
                         </div>
                         <div class="cards-banner">
-                            <img src="./img/card1.png" alt="card">
+                            <img class="product-img" src="./img/card1.png" alt="card">
                         </div>
                         <div class="cards-price">
-                            <span>ELF BAR </span>
-                            <span>250 грн</span>
+                            <div class="counter-inner">
+                                <div class="counter-control" data-action="minus">-</div>
+                                <div class="counter-control" data-counter>1</div>
+                                <div class="counter-control" data-action="plus">+</div>
+                            </div>
+                            <span class="price-currency">250 грн</span>
                         </div>
                         <div class="cards-btn">
                             <button class="option-btn">Детальніше</button>
-                            <button class="btn shop-btn">До кошику</button>
+                            <button class="btn shop-btn" type="button" data-card>До кошику</button>
                         </div>
                     </div>
-                    <div class="cards-item">
+                    <div class="cards-item" data-id ="04">
                         <div class="cards-header">
-                            <span>5000</span>
+                            <span class="cards-title">ELF BAR4</span>
                             <img src="./img/love.svg" alt="like">
                         </div>
                         <div class="cards-banner">
-                            <img src="./img/card4.png" alt="card">
+                            <img class="product-img" src="./img/card4.png" alt="card">
                         </div>
                         <div class="cards-price">
-                            <span>ELF BAR </span>
-                            <span>250 грн</span>
+                            <div class="counter-inner">
+                                <div class="counter-control" data-action="minus">-</div>
+                                <div class="counter-control" data-counter>1</div>
+                                <div class="counter-control" data-action="plus">+</div>
+                            </div>
+                            <span class="price-currency">300 грн</span>
                         </div>
                         <div class="cards-btn">
                             <button class="option-btn">Детальніше</button>
-                            <button class="btn shop-btn">До кошику</button>
+                            <button class="btn shop-btn" type="button" data-card>До кошику</button>
                         </div>
                     </div>
-                    <div class="cards-item">
+                    <div class="cards-item" data-id ="05">
                         <div class="cards-header">
-                            <span>5000</span>
+                            <span class="cards-title">ELF BAR5</span>
                             <img src="./img/love.svg" alt="like">
                         </div>
                         <div class="cards-banner">
-                            <img src="./img/card4.png" alt="card">
+                            <img class="product-img" src="./img/card4.png" alt="card">
                         </div>
                         <div class="cards-price">
-                            <span>ELF BAR </span>
-                            <span>250 грн</span>
+                            <div class="counter-inner">
+                                <div class="counter-control" data-action="minus">-</div>
+                                <div class="counter-control" data-counter>1</div>
+                                <div class="counter-control" data-action="plus">+</div>
+                            </div>
+                            <span class="price-currency">250 грн</span>
                         </div>
                         <div class="cards-btn">
                             <button class="option-btn">Детальніше</button>
-                            <button class="btn shop-btn">До кошику</button>
+                            <button class="btn shop-btn" type="button" data-card>До кошику</button>
                         </div>
                     </div>
-                    <div class="cards-item">
+                    <div class="cards-item" data-id ="06">
                         <div class="cards-header">
-                            <span>5000</span>
+                            <span class="cards-title">ELF BAR6</span>
                             <img src="./img/love.svg" alt="like">
                         </div>
                         <div class="cards-banner">
-                            <img src="./img/card4.png" alt="card">
+                            <img class="product-img" src="./img/card4.png" alt="card">
                         </div>
                         <div class="cards-price">
-                            <span>ELF BAR </span>
-                            <span>250 грн</span>
+                            <div class="counter-inner">
+                                <div class="counter-control" data-action="minus">-</div>
+                                <div class="counter-control" data-counter>1</div>
+                                <div class="counter-control" data-action="plus">+</div>
+                            </div>
+                            <span class="price-currency">250 грн</span>
                         </div>
                         <div class="cards-btn">
                             <button class="option-btn">Детальніше</button>
-                            <button class="btn shop-btn">До кошику</button>
+                            <button class="btn shop-btn" type="button" data-card>До кошику</button>
                         </div>
                     </div>
                 </div>
@@ -437,6 +457,28 @@
                 <p>Сайт містить товари для дорослих. Щоб продовжити, підтвердіть, що вам вже виповнилося 18 років</p>
                 <button class="btn close-popup-warn">Мені вже є 18 років</button>
             </div>
+        </div>
+    </section>
+
+    <section class="product-buy">
+        <div class="container product-buy-container">
+            <a href="" class="close-product-btn">&times;</a>
+            <div class="product-buy-inner">
+                <h2>Кошик</h2>
+                <div class="product-buy-card">
+                    <div class="card-wrap-item">
+                        <span class="product-card-id">01</span>
+                        <div class="product-buy-img">
+                            <img src="./img/card1.png" alt="buy">
+                        </div>
+                    </div>
+                    <div class="card-wrap-item-2">
+                        <div class="product-by-title">Elf Bar BC5000 Ultra</div>
+                        <div class="product-price">1 X 250 грн</div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn product-buy-btn">Оформити замовлення</button>
         </div>
     </section>
 
